Upgrade all libraries.