@@ -9,8 +9,6 @@
 	<version>2.0.0-SNAPSHOT</version>
 
 	<properties>
-		<slf4j.version>1.7.25</slf4j.version>
-		<snomed.boot.version>4.0.4</snomed.boot.version>
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
@@ -22,7 +20,7 @@
 		<dependency>
 			<groupId>org.snomed.otf</groupId>
 			<artifactId>snomed-boot</artifactId>
-			<version>${snomed.boot.version}</version>
+			<version>5.0.0</version>
 		</dependency>
 
 		<!-- SNOMED OWL API -->
@@ -30,26 +28,26 @@
 		<dependency>
 			<groupId>org.snomed.otf</groupId>
 			<artifactId>snomed-owl-toolkit</artifactId>
-			<version>3.0.11</version>
+			<version>4.0.0</version>
 		</dependency>
 
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.36</version>
+			<version>2.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.36</version>
+			<version>2.0.9</version>
 		</dependency>
 
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.8.1</version>
+			<version>5.10.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -59,8 +57,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.1.2</version>
 				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 					<excludes>
 						<exclude>org.snomed.ontology.extraction.manualtests.*</exclude>
 					</excludes>
@@ -70,7 +69,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.12.RELEASE</version>
+				<version>3.1.5</version>
 				<executions>
 					<execution>
 						<goals>
